# dynamic

./: dynamic.cabal  flake.nix
.github/workflows/: nix.yml  release.yml
docs/: Dynamic.html  doc-index.html  doc-index.json  dynamic.haddock  dynamic.txt  index.html
docs/src/: Dynamic.html
src/: Dynamic.hs
